# curl-master

./: README.md  generate_icon.py  index.html  package-lock.json  package.json
.github/workflows/: build.yml
documentation/: BACKEND_INTEGRATION.md  BUILD_PROGRESS.md  CANCELLATION_FEATURE.md  COLLECTIONS_SIDEBAR.md  DEV_GUIDE.md  SAVE_REQUEST_FEATURE.md  UI_PROGRESS.md  implementation_plan.md
src/: App.vue  splitpanes.d.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: commands.rs  db.rs  github.rs  http.rs  main.rs  models.rs  sync.rs
src-tauri/src/commands/: collection.rs  environment.rs  github.rs  history.rs  mod.rs  request.rs  settings.rs  workspace.rs
src/components/: AddCollectionTypeModal.vue  CollectionsSidebar.vue  EnvironmentModal.vue  ImportCurlModal.vue  ImportPostmanModal.vue  JsonNode.vue  JsonTreeViewer.vue  Modal.vue  RequestBuilder.vue  RequestHistory.vue  RequestTabs.vue  ResponseViewer.vue  SaveRequestModal.vue  SyncModal.vue  SyncSettings.vue  Titlebar.vue  VariableTooltip.vue
src/composables/: useVariableTooltip.ts
src/utils/: curlParser.ts  postmanConverter.ts
sync-server/: README.md  auth.js  db.js  index.js  package.json
